# nao_samples

./: README.md
get_up_stand_down/: CMakeLists.txt  qiproject.xml
get_up_stand_down/include/: stand_up_sit_down.h
get_up_stand_down/include/proxies/: proxy_base.h
get_up_stand_down/src/: stand_up_sit_down.cpp
inertial_monitor/: qiproject.xml
learn_face/include/: module.h
learn_face/include/proxies/: motion_proxy.h  proxy_base.h  sensors_proxy.h
learn_face/include/tools/: printers.h
learn_face/src/: main.cpp
learn_face/src/proxies/: face_detection_proxy.cpp
nao_modules/get_up_stand_down/: CMakeLists.txt
nao_modules/get_up_stand_down/src/: main.cpp
nao_modules/helloworld/build-local/: CMakeCache.txt  Makefile  cmake_install.cmake
nao_modules/inertial_monitor/: CMakeLists.txt  main.cpp
nao_modules/learn_face/: CMakeLists.txt  qiproject.xml
nao_modules/learn_face/include/proxies/: video_device_proxy.h
nao_modules/learn_face/src/: module.cpp
nao_modules/learn_face/src/proxies/: video_device_proxy.cpp
nao_modules/learn_face/src/tools/: printers.cpp
nao_modules/nao_touch_sensors/: qiproject.xml
nao_modules/nao_touch_sensors/build-local/: CMakeCache.txt  Makefile  cmake_install.cmake
nao_modules/nao_touch_sensors/include/local_broker/: local_broker.h
nao_modules/nao_touch_sensors/src/: bumpers.cpp  main.cpp
nao_modules/nao_touch_sensors/src/proxies/: sensors_proxy.cpp
nao_modules/search_for_faces/: CMakeLists.txt
nao_modules/search_for_faces/build-local/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake
nao_modules/search_for_faces/build-local/sdk/share/qi/: path.conf
nao_modules/search_for_faces/include/proxies/: face_detection_proxy.h  robot_posture_proxy.h  speech_recognition_proxy.h
nao_modules/search_for_faces/src/proxies/: motion_proxy.cpp  robot_posture_proxy.cpp
nao_touch_sensors/: CMakeLists.txt  bumpers.cpp  bumpers.h  local_broker.cpp  local_broker.h  main.cpp  memory_proxy.cpp  memory_proxy.h
nao_touch_sensors/include/: bumpers.h
nao_touch_sensors/include/local_broker/: local_broker.h
nao_touch_sensors/include/proxies/: memory_proxy.h  proxy_base.h  sensors_proxy.h  text_to_speech_proxy.h
nao_touch_sensors/src/: bumpers.cpp  main.cpp
nao_touch_sensors/src/local_broker/: local_broker.cpp
nao_touch_sensors/src/proxies/: memory_proxy.cpp  sensors_proxy.cpp  text_to_speech_proxy.cpp
search_for_faces/: qiproject.xml
search_for_faces/include/: module.h
search_for_faces/include/local_broker/: local_broker.h
search_for_faces/include/proxies/: proxy_base.h
search_for_faces/src/: main.cpp  module.cpp
search_for_faces/src/proxies/: speech_recognition_proxy.cpp  text_to_speech_proxy.cpp
